syntax = "proto3";

package chatee.dbc;

option go_package = "chatee-go/proto/dbc";

import "common/common.proto";

// =============================================================================
// DBC Service - DataBase Controller
// =============================================================================
// DBC provides unified data access layer for all services.
// It handles MySQL, HBase, and Redis operations through gRPC.

// =============================================================================
// User Service
// =============================================================================

service UserService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetUser(GetUserRequest) returns (User);
    rpc GetUserByEmail(GetUserByEmailRequest) returns (User);
    rpc UpdateUser(UpdateUserRequest) returns (User);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    string avatar = 4;
    string role = 5;
    bytes preferences = 6;  // JSON
    bytes metadata = 7;     // JSON
    int64 created_at = 8;
    int64 updated_at = 9;
}

message CreateUserRequest {
    string email = 1;
    string name = 2;
    string avatar = 3;
    string role = 4;
    bytes preferences = 5;
    bytes metadata = 6;
}

message GetUserRequest {
    string id = 1;
}

message GetUserByEmailRequest {
    string email = 1;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string avatar = 3;
    string role = 4;
    bytes preferences = 5;
    bytes metadata = 6;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message ListUsersRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    int32 total = 2;
}

// =============================================================================
// Session Service
// =============================================================================

service SessionService {
    rpc CreateSession(CreateSessionRequest) returns (Session);
    rpc GetSession(GetSessionRequest) returns (Session);
    rpc GetSessionsByUser(GetSessionsByUserRequest) returns (GetSessionsByUserResponse);
    rpc UpdateSession(UpdateSessionRequest) returns (Session);
    rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);
}

message Session {
    string id = 1;
    string user_id = 2;
    string agent_id = 3;
    string title = 4;
    string status = 5;
    bytes metadata = 6;  // JSON
    int64 created_at = 7;
    int64 updated_at = 8;
}

message CreateSessionRequest {
    string user_id = 1;
    string agent_id = 2;
    string title = 3;
    bytes metadata = 4;
}

message GetSessionRequest {
    string id = 1;
}

message GetSessionsByUserRequest {
    string user_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message GetSessionsByUserResponse {
    repeated Session sessions = 1;
    int32 total = 2;
}

message UpdateSessionRequest {
    string id = 1;
    string title = 2;
    string status = 3;
    bytes metadata = 4;
}

message DeleteSessionRequest {
    string id = 1;
}

message DeleteSessionResponse {
    bool success = 1;
}

// =============================================================================
// Agent Service
// =============================================================================

service AgentService {
    rpc CreateAgent(CreateAgentRequest) returns (Agent);
    rpc GetAgent(GetAgentRequest) returns (Agent);
    rpc GetAgentsByUser(GetAgentsByUserRequest) returns (GetAgentsByUserResponse);
    rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);
    rpc UpdateAgent(UpdateAgentRequest) returns (Agent);
    rpc DeleteAgent(DeleteAgentRequest) returns (DeleteAgentResponse);
}

message Agent {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string description = 4;
    string system_prompt = 5;
    string model = 6;
    string provider = 7;
    bytes persona = 8;        // JSON
    bytes mcp_servers = 9;    // JSON
    bool is_default = 10;
    bool is_public = 11;
    int64 created_at = 12;
    int64 updated_at = 13;
}

message CreateAgentRequest {
    string user_id = 1;
    string name = 2;
    string description = 3;
    string system_prompt = 4;
    string model = 5;
    string provider = 6;
    bytes persona = 7;
    bytes mcp_servers = 8;
    bool is_default = 9;
    bool is_public = 10;
}

message GetAgentRequest {
    string id = 1;
}

message GetAgentsByUserRequest {
    string user_id = 1;
}

message GetAgentsByUserResponse {
    repeated Agent agents = 1;
}

message ListAgentsRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListAgentsResponse {
    repeated Agent agents = 1;
    int32 total = 2;
}

message UpdateAgentRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string system_prompt = 4;
    string model = 5;
    string provider = 6;
    bytes persona = 7;
    bytes mcp_servers = 8;
    bool is_default = 9;
    bool is_public = 10;
}

message DeleteAgentRequest {
    string id = 1;
}

message DeleteAgentResponse {
    bool success = 1;
}

// =============================================================================
// Message Service
// =============================================================================

service MessageService {
    rpc CreateMessage(CreateMessageRequest) returns (Message);
    rpc GetMessage(GetMessageRequest) returns (Message);
    rpc GetMessagesBySession(GetMessagesBySessionRequest) returns (GetMessagesBySessionResponse);
    rpc UpdateMessage(UpdateMessageRequest) returns (Message);
    rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message Message {
    string id = 1;
    string session_id = 2;
    string role = 3;
    string content = 4;
    bytes tool_calls = 5;      // JSON
    string tool_call_id = 6;
    bytes metadata = 7;        // JSON
    int64 created_at = 8;
}

message CreateMessageRequest {
    string session_id = 1;
    string role = 2;
    string content = 3;
    bytes tool_calls = 4;
    string tool_call_id = 5;
    bytes metadata = 6;
}

message GetMessageRequest {
    string id = 1;
}

message GetMessagesBySessionRequest {
    string session_id = 1;
    int32 offset = 2;
    int32 limit = 3;
}

message GetMessagesBySessionResponse {
    repeated Message messages = 1;
    int32 total = 2;
}

message UpdateMessageRequest {
    string id = 1;
    string content = 2;
    bytes metadata = 3;
}

message DeleteMessageRequest {
    string id = 1;
}

message DeleteMessageResponse {
    bool success = 1;
}

// =============================================================================
// LLM Config Service
// =============================================================================

service LLMConfigService {
    rpc CreateLLMConfig(CreateLLMConfigRequest) returns (LLMConfig);
    rpc GetLLMConfig(GetLLMConfigRequest) returns (LLMConfig);
    rpc GetDefaultLLMConfig(GetDefaultLLMConfigRequest) returns (LLMConfig);
    rpc GetLLMConfigsByProvider(GetLLMConfigsByProviderRequest) returns (GetLLMConfigsByProviderResponse);
    rpc ListLLMConfigs(ListLLMConfigsRequest) returns (ListLLMConfigsResponse);
    rpc UpdateLLMConfig(UpdateLLMConfigRequest) returns (LLMConfig);
    rpc DeleteLLMConfig(DeleteLLMConfigRequest) returns (DeleteLLMConfigResponse);
}

message LLMConfig {
    string id = 1;
    string name = 2;
    string provider = 3;
    string api_key = 4;
    string base_url = 5;
    bytes models = 6;          // JSON
    bool is_default = 7;
    bool is_enabled = 8;
    bytes settings = 9;       // JSON
    int64 created_at = 10;
    int64 updated_at = 11;
}

message CreateLLMConfigRequest {
    string name = 1;
    string provider = 2;
    string api_key = 3;
    string base_url = 4;
    bytes models = 5;
    bool is_default = 6;
    bool is_enabled = 7;
    bytes settings = 8;
}

message GetLLMConfigRequest {
    string id = 1;
}

message GetDefaultLLMConfigRequest {
    // Empty - gets the default enabled config
}

message GetLLMConfigsByProviderRequest {
    string provider = 1;
}

message GetLLMConfigsByProviderResponse {
    repeated LLMConfig configs = 1;
}

message ListLLMConfigsRequest {
    // Empty - lists all
}

message ListLLMConfigsResponse {
    repeated LLMConfig configs = 1;
}

message UpdateLLMConfigRequest {
    string id = 1;
    string name = 2;
    string api_key = 3;
    string base_url = 4;
    bytes models = 5;
    bool is_default = 6;
    bool is_enabled = 7;
    bytes settings = 8;
}

message DeleteLLMConfigRequest {
    string id = 1;
}

message DeleteLLMConfigResponse {
    bool success = 1;
}

// =============================================================================
// MCP Server Service
// =============================================================================

service MCPServerService {
    rpc CreateMCPServer(CreateMCPServerRequest) returns (MCPServer);
    rpc GetMCPServer(GetMCPServerRequest) returns (MCPServer);
    rpc GetMCPServersByUser(GetMCPServersByUserRequest) returns (GetMCPServersByUserResponse);
    rpc ListMCPServers(ListMCPServersRequest) returns (ListMCPServersResponse);
    rpc UpdateMCPServer(UpdateMCPServerRequest) returns (MCPServer);
    rpc DeleteMCPServer(DeleteMCPServerRequest) returns (DeleteMCPServerResponse);
}

message MCPServer {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string description = 4;
    string type = 5;           // http, sse, stdio
    string url = 6;
    string command = 7;
    bytes args = 8;            // JSON
    bytes env = 9;            // JSON
    bytes headers = 10;       // JSON
    string auth_type = 11;    // none, bearer, oauth
    bytes auth_config = 12;   // JSON
    bool is_enabled = 13;
    int64 created_at = 14;
    int64 updated_at = 15;
}

message CreateMCPServerRequest {
    string user_id = 1;
    string name = 2;
    string description = 3;
    string type = 4;
    string url = 5;
    string command = 6;
    bytes args = 7;
    bytes env = 8;
    bytes headers = 9;
    string auth_type = 10;
    bytes auth_config = 11;
    bool is_enabled = 12;
}

message GetMCPServerRequest {
    string id = 1;
}

message GetMCPServersByUserRequest {
    string user_id = 1;
}

message GetMCPServersByUserResponse {
    repeated MCPServer servers = 1;
}

message ListMCPServersRequest {
    // Empty - lists all
}

message ListMCPServersResponse {
    repeated MCPServer servers = 1;
}

message UpdateMCPServerRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string type = 4;
    string url = 5;
    string command = 6;
    bytes args = 7;
    bytes env = 8;
    bytes headers = 9;
    string auth_type = 10;
    bytes auth_config = 11;
    bool is_enabled = 12;
}

message DeleteMCPServerRequest {
    string id = 1;
}

message DeleteMCPServerResponse {
    bool success = 1;
}

// =============================================================================
// HBase Service - Thread Operations
// =============================================================================

service HBaseThreadService {
    // Thread Metadata
    rpc SaveThreadMetadata(SaveThreadMetadataRequest) returns (SaveThreadMetadataResponse);
    rpc GetThreadMetadata(GetThreadMetadataRequest) returns (ThreadMetadata);
    
    // Thread Messages
    rpc SaveThreadMessage(SaveThreadMessageRequest) returns (SaveThreadMessageResponse);
    rpc GetThreadMessage(GetThreadMessageRequest) returns (ThreadMessageRow);
    rpc GetThreadMessages(GetThreadMessagesRequest) returns (GetThreadMessagesResponse);
    
    // Follow Feeds (写扩散到粉丝收件箱)
    rpc SaveFollowFeed(SaveFollowFeedRequest) returns (SaveFollowFeedResponse);
    rpc GetUserFollowFeeds(GetUserFollowFeedsRequest) returns (GetUserFollowFeedsResponse);
    
    // Reply Feeds (写扩散到回复收件箱)
    rpc SaveReplyFeed(SaveReplyFeedRequest) returns (SaveReplyFeedResponse);
    rpc GetUserReplyFeeds(GetUserReplyFeedsRequest) returns (GetUserReplyFeedsResponse);
}

message ThreadMetadata {
    string thread_id = 1;
    string owner_id = 2;
    string root_msg_id = 3;
    string title = 4;
    repeated string ai_agents = 5;
    string settings = 6;          // JSON string
    int64 created_at = 7;
    string status = 8;            // "active" | "closed" | "archived"
    int64 reply_count = 9;
    repeated string participants = 10;
    string last_msg_id = 11;
    int64 last_active_at = 12;
    double hot_score = 13;
}

message SaveThreadMetadataRequest {
    ThreadMetadata thread = 1;
}

message SaveThreadMetadataResponse {
    bool success = 1;
}

message GetThreadMetadataRequest {
    string thread_id = 1;
}

message ThreadMessageRow {
    string row_key = 1;
    string thread_id = 2;
    string msg_id = 3;
    string author_id = 4;
    string author_type = 5;       // "user" | "ai"
    string content_type = 6;
    bytes raw_content = 7;
    bool compressed = 8;
    string parent_msg_id = 9;
    repeated string mentions = 10;
    int32 depth = 11;
    string metadata = 12;          // JSON string
    int64 timestamp = 13;
    bool deleted = 14;
}

message SaveThreadMessageRequest {
    ThreadMessageRow message = 1;
}

message SaveThreadMessageResponse {
    bool success = 1;
}

message GetThreadMessageRequest {
    string thread_id = 1;
    string msg_id = 2;
}

message GetThreadMessagesRequest {
    string thread_id = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message GetThreadMessagesResponse {
    repeated ThreadMessageRow messages = 1;
    int64 total = 2;
}

message FollowFeedRow {
    string row_key = 1;
    string user_id = 2;
    string thread_id = 3;
    string msg_id = 4;
    string msg_type = 5;          // "root" | "reply"
    string author_id = 6;
    string author_type = 7;
    string content_preview = 8;
    string flags = 9;              // JSON string
    int64 timestamp = 10;
    bool read = 11;
}

message SaveFollowFeedRequest {
    FollowFeedRow feed = 1;
}

message SaveFollowFeedResponse {
    bool success = 1;
}

message GetUserFollowFeedsRequest {
    string user_id = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message GetUserFollowFeedsResponse {
    repeated FollowFeedRow feeds = 1;
    int64 total = 2;
}

message ReplyFeedRow {
    string row_key = 1;
    string user_id = 2;
    string thread_id = 3;
    string reply_msg_id = 4;
    string reply_author = 5;
    string parent_msg_id = 6;
    string push_type = 7;          // "full" | "limited" | "mention"
    string content_type = 8;      // "full_content" | "preview_only"
    string content_preview = 9;
    bytes full_content = 10;
    string reason = 11;            // "owner" | "mentioned" | "ai_mentioned"
    int64 timestamp = 12;
    bool require_follow = 13;
    string thread_owner = 14;
}

message SaveReplyFeedRequest {
    ReplyFeedRow feed = 1;
}

message SaveReplyFeedResponse {
    bool success = 1;
}

message GetUserReplyFeedsRequest {
    string user_id = 1;
    int64 limit = 2;
    int64 offset = 3;
}

message GetUserReplyFeedsResponse {
    repeated ReplyFeedRow feeds = 1;
    int64 total = 2;
}

// =============================================================================
// HBase Service - Chat Operations
// =============================================================================

service HBaseChatService {
    // Chat Metadata
    rpc SaveChatMetadata(SaveChatMetadataRequest) returns (SaveChatMetadataResponse);
    rpc GetChatMetadata(GetChatMetadataRequest) returns (ChatMetadataRow);
    
    // Chat Inbox (写扩散到参与者收件箱)
    rpc SaveChatInbox(SaveChatInboxRequest) returns (SaveChatInboxResponse);
    rpc GetUserChatInbox(GetUserChatInboxRequest) returns (GetUserChatInboxResponse);
}

message ChatMetadataRow {
    string row_key = 1;
    string chat_key = 2;
    string chat_type = 3;          // "private" | "group"
    repeated string participants = 4;
    repeated string ai_agents = 5;
    string created_by = 6;
    int64 created_at = 7;
    string settings = 8;           // JSON string
    string status = 9;             // "active" | "muted" | "archived"
    int64 msg_count = 10;
    string last_msg_id = 11;
    int64 last_active_at = 12;
    string unread_counts = 13;     // JSON string
}

message SaveChatMetadataRequest {
    ChatMetadataRow chat = 1;
}

message SaveChatMetadataResponse {
    bool success = 1;
}

message GetChatMetadataRequest {
    string chat_key = 1;
}

message ChatInboxRow {
    string row_key = 1;
    string user_id = 2;
    string chat_key = 3;
    string msg_id = 4;
    string sender_id = 5;
    string sender_type = 6;        // "user" | "ai"
    string content_type = 7;
    bytes raw_content = 8;
    repeated string mentions = 9;
    string flags = 10;              // JSON string
    int64 timestamp = 11;
}

message SaveChatInboxRequest {
    ChatInboxRow inbox = 1;
}

message SaveChatInboxResponse {
    bool success = 1;
}

message GetUserChatInboxRequest {
    string user_id = 1;
    string chat_key = 2;
    int64 limit = 3;
    int64 offset = 4;
}

message GetUserChatInboxResponse {
    repeated ChatInboxRow inboxes = 1;
    int64 total = 2;
}

// =============================================================================
// Cache Service - Redis Operations
// =============================================================================

service CacheService {
    // String operations
    rpc Get(GetRequest) returns (GetResponse);
    rpc Set(SetRequest) returns (SetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc Exists(ExistsRequest) returns (ExistsResponse);
    rpc Expire(ExpireRequest) returns (ExpireResponse);
    
    // Set operations (for user relationships)
    rpc SAdd(SAddRequest) returns (SAddResponse);
    rpc SRem(SRemRequest) returns (SRemResponse);
    rpc SMembers(SMembersRequest) returns (SMembersResponse);
    rpc SIsMember(SIsMemberRequest) returns (SIsMemberResponse);
    rpc SCard(SCardRequest) returns (SCardResponse);
    
    // Sorted Set operations (for timelines, rankings)
    rpc ZAdd(ZAddRequest) returns (ZAddResponse);
    rpc ZRem(ZRemRequest) returns (ZRemResponse);
    rpc ZRange(ZRangeRequest) returns (ZRangeResponse);
    rpc ZRevRange(ZRevRangeRequest) returns (ZRevRangeResponse);
    rpc ZScore(ZScoreRequest) returns (ZScoreResponse);
    rpc ZIncrBy(ZIncrByRequest) returns (ZIncrByResponse);
    
    // Hash operations
    rpc HGet(HGetRequest) returns (HGetResponse);
    rpc HSet(HSetRequest) returns (HSetResponse);
    rpc HGetAll(HGetAllRequest) returns (HGetAllResponse);
    rpc HIncrBy(HIncrByRequest) returns (HIncrByResponse);
    rpc HDel(HDelRequest) returns (HDelResponse);
    
    // Counter operations
    rpc Incr(IncrRequest) returns (IncrResponse);
    rpc Decr(DecrRequest) returns (DecrResponse);
    rpc IncrBy(IncrByRequest) returns (IncrByResponse);
    rpc DecrBy(DecrByRequest) returns (DecrByResponse);
    
    // Pub/Sub operations
    rpc Publish(PublishRequest) returns (PublishResponse);
    
    // Batch operations
    rpc MGet(MGetRequest) returns (MGetResponse);
    rpc MSet(MSetRequest) returns (MSetResponse);
}

// String operations
message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool exists = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
    int64 ttl_seconds = 3;  // 0 = no expiration
}

message SetResponse {
    bool success = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    bool success = 1;
}

message ExistsRequest {
    string key = 1;
}

message ExistsResponse {
    bool exists = 1;
}

message ExpireRequest {
    string key = 1;
    int64 seconds = 2;
}

message ExpireResponse {
    bool success = 1;
}

// Set operations
message SAddRequest {
    string key = 1;
    repeated string members = 2;
}

message SAddResponse {
    int64 added_count = 1;
}

message SRemRequest {
    string key = 1;
    repeated string members = 2;
}

message SRemResponse {
    int64 removed_count = 1;
}

message SMembersRequest {
    string key = 1;
}

message SMembersResponse {
    repeated string members = 1;
}

message SIsMemberRequest {
    string key = 1;
    string member = 2;
}

message SIsMemberResponse {
    bool is_member = 1;
}

message SCardRequest {
    string key = 1;
}

message SCardResponse {
    int64 count = 1;
}

// Sorted Set operations
message ZAddRequest {
    string key = 1;
    repeated ZMember members = 2;
}

message ZMember {
    string member = 1;
    double score = 2;
}

message ZAddResponse {
    int64 added_count = 1;
}

message ZRemRequest {
    string key = 1;
    repeated string members = 2;
}

message ZRemResponse {
    int64 removed_count = 1;
}

message ZRangeRequest {
    string key = 1;
    int64 start = 2;
    int64 stop = 3;
    bool with_scores = 4;
}

message ZRangeResponse {
    repeated string members = 1;
    repeated double scores = 2;
}

message ZRevRangeRequest {
    string key = 1;
    int64 start = 2;
    int64 stop = 3;
    bool with_scores = 4;
}

message ZRevRangeResponse {
    repeated string members = 1;
    repeated double scores = 2;
}

message ZScoreRequest {
    string key = 1;
    string member = 2;
}

message ZScoreResponse {
    double score = 1;
    bool exists = 2;
}

message ZIncrByRequest {
    string key = 1;
    string member = 2;
    double increment = 3;
}

message ZIncrByResponse {
    double new_score = 1;
}

// Hash operations
message HGetRequest {
    string key = 1;
    string field = 2;
}

message HGetResponse {
    string value = 1;
    bool exists = 2;
}

message HSetRequest {
    string key = 1;
    string field = 2;
    string value = 3;
}

message HSetResponse {
    bool success = 1;
}

message HGetAllRequest {
    string key = 1;
}

message HGetAllResponse {
    map<string, string> fields = 1;
}

message HIncrByRequest {
    string key = 1;
    string field = 2;
    int64 increment = 3;
}

message HIncrByResponse {
    int64 new_value = 1;
}

message HDelRequest {
    string key = 1;
    repeated string fields = 2;
}

message HDelResponse {
    int64 deleted_count = 1;
}

// Counter operations
message IncrRequest {
    string key = 1;
}

message IncrResponse {
    int64 value = 1;
}

message DecrRequest {
    string key = 1;
}

message DecrResponse {
    int64 value = 1;
}

message IncrByRequest {
    string key = 1;
    int64 increment = 2;
}

message IncrByResponse {
    int64 value = 1;
}

message DecrByRequest {
    string key = 1;
    int64 decrement = 2;
}

message DecrByResponse {
    int64 value = 1;
}

// Pub/Sub operations
message PublishRequest {
    string channel = 1;
    string message = 2;
}

message PublishResponse {
    int64 subscriber_count = 1;
}

// Batch operations
message MGetRequest {
    repeated string keys = 1;
}

message MGetResponse {
    map<string, string> values = 1;  // key -> value, missing keys not included
}

message MSetRequest {
    map<string, string> key_values = 1;
}

message MSetResponse {
    bool success = 1;
}

// =============================================================================
// ChromaDB Service - Vector Database Operations (RAG)
// =============================================================================

service ChromaService {
    // Collection Management
    rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse);
    rpc GetCollection(GetCollectionRequest) returns (Collection);
    rpc ListCollections(ListCollectionsRequest) returns (ListCollectionsResponse);
    rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse);
    
    // Document Operations
    rpc AddDocuments(AddDocumentsRequest) returns (AddDocumentsResponse);
    rpc GetDocuments(GetDocumentsRequest) returns (GetDocumentsResponse);
    rpc DeleteDocuments(DeleteDocumentsRequest) returns (DeleteDocumentsResponse);
    rpc UpdateDocuments(UpdateDocumentsRequest) returns (UpdateDocumentsResponse);
    
    // Query Operations (RAG)
    rpc Query(QueryRequest) returns (QueryResponse);
    rpc QueryByIDs(QueryByIDsRequest) returns (QueryByIDsResponse);
    
    // Embedding Operations
    rpc GetEmbeddings(GetEmbeddingsRequest) returns (GetEmbeddingsResponse);
}

// Collection
message Collection {
    string name = 1;
    string id = 2;
    map<string, string> metadata = 3;
    int64 created_at = 4;
}

// Document
message Document {
    string id = 1;
    repeated float embedding = 2;  // Vector embedding
    string content = 3;            // Text content
    map<string, string> metadata = 4;
}

// Query Result
message QueryResult {
    repeated string ids = 1;
    repeated EmbeddingVector embeddings = 2;  // List of vectors
    repeated string documents = 3;            // Text contents
    repeated float distances = 4;             // Similarity distances
    repeated Metadata metadatas = 5;          // List of metadata maps
}

// EmbeddingVector represents a single embedding vector
message EmbeddingVector {
    repeated float values = 1;
}

// Metadata represents document metadata
message Metadata {
    map<string, string> fields = 1;
}

// Collection Management
message CreateCollectionRequest {
    string name = 1;
    map<string, string> metadata = 2;
}

message CreateCollectionResponse {
    Collection collection = 1;
}

message GetCollectionRequest {
    string name = 1;
}

message ListCollectionsRequest {
    // Empty - lists all collections
}

message ListCollectionsResponse {
    repeated Collection collections = 1;
}

message DeleteCollectionRequest {
    string name = 1;
}

message DeleteCollectionResponse {
    bool success = 1;
}

// Document Operations
message AddDocumentsRequest {
    string collection_name = 1;
    repeated Document documents = 2;
}

message AddDocumentsResponse {
    repeated string ids = 1;  // Generated IDs for documents
    bool success = 2;
}

message GetDocumentsRequest {
    string collection_name = 1;
    repeated string ids = 2;
    bool include_embeddings = 3;
}

message GetDocumentsResponse {
    repeated Document documents = 1;
}

message DeleteDocumentsRequest {
    string collection_name = 1;
    repeated string ids = 2;
}

message DeleteDocumentsResponse {
    bool success = 1;
    int64 deleted_count = 2;
}

message UpdateDocumentsRequest {
    string collection_name = 1;
    repeated Document documents = 2;
}

message UpdateDocumentsResponse {
    bool success = 1;
}

// Query Operations
message QueryRequest {
    string collection_name = 1;
    repeated float query_embeddings = 2;  // Query vector(s)
    int32 n_results = 3;                   // Top K results
    map<string, string> where = 4;         // Metadata filter
    repeated string include = 5;           // ["documents", "metadatas", "embeddings", "distances"]
}

message QueryResponse {
    repeated QueryResult results = 1;  // One result per query embedding
}

message QueryByIDsRequest {
    string collection_name = 1;
    repeated string ids = 2;
    repeated string include = 3;  // ["documents", "metadatas", "embeddings"]
}

message QueryByIDsResponse {
    repeated Document documents = 1;
}

// Embedding Operations
message GetEmbeddingsRequest {
    string collection_name = 1;
    repeated string ids = 2;
}

message GetEmbeddingsResponse {
    repeated EmbeddingItem embeddings = 1;  // List of id -> embedding pairs
}

// EmbeddingItem represents a single embedding with its ID
message EmbeddingItem {
    string id = 1;
    repeated float values = 2;
}
