package handler

import (
	"context"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	"chatee-go/commonlib/log"
	dbc "chatee-go/gen/dbc"
)

// ChromaHandler implements ChromaService gRPC interface
// This is a placeholder implementation as ChromaDB integration is not yet implemented
type ChromaHandler struct {
	dbc.UnimplementedChromaServiceServer
	
	logger log.Logger
}

// NewChromaHandler creates a new Chroma handler
func NewChromaHandler(logger log.Logger) *ChromaHandler {
	return &ChromaHandler{
		logger: logger,
	}
}

// Register registers the handler with gRPC server
func (h *ChromaHandler) Register(server *grpc.Server) {
	dbc.RegisterChromaServiceServer(server, h)
}

// AddDocuments is a placeholder for ChromaDB document addition
func (h *ChromaHandler) AddDocuments(ctx context.Context, req *dbc.AddDocumentsRequest) (*dbc.AddDocumentsResponse, error) {
	h.logger.Warn("ChromaDB AddDocuments not implemented yet")
	return nil, status.Errorf(codes.Unimplemented, "ChromaDB integration not yet implemented")
}

// QueryDocuments is a placeholder for ChromaDB document query
func (h *ChromaHandler) QueryDocuments(ctx context.Context, req *dbc.QueryDocumentsRequest) (*dbc.QueryDocumentsResponse, error) {
	h.logger.Warn("ChromaDB QueryDocuments not implemented yet")
	return nil, status.Errorf(codes.Unimplemented, "ChromaDB integration not yet implemented")
}

// DeleteDocuments is a placeholder for ChromaDB document deletion
func (h *ChromaHandler) DeleteDocuments(ctx context.Context, req *dbc.DeleteDocumentsRequest) (*dbc.DeleteDocumentsResponse, error) {
	h.logger.Warn("ChromaDB DeleteDocuments not implemented yet")
	return nil, status.Errorf(codes.Unimplemented, "ChromaDB integration not yet implemented")
}

// UpdateDocuments is a placeholder for ChromaDB document update
func (h *ChromaHandler) UpdateDocuments(ctx context.Context, req *dbc.UpdateDocumentsRequest) (*dbc.UpdateDocumentsResponse, error) {
	h.logger.Warn("ChromaDB UpdateDocuments not implemented yet")
	return nil, status.Errorf(codes.Unimplemented, "ChromaDB integration not yet implemented")
}

